customizing post layout

--- a/docs/_sass/no-style-please.scss
+++ b/docs/_sass/no-style-please.scss
@@ -33,9 +33,9 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta { text-align: right; }
+.post-meta { text-align: right; display: inline flex; }
 
-h1 {font-size: 20px;}
+h1 {font-size: 20px; display: inline flex; }
 
 h2, h3, h4, h5, h6 { margin-top: 3rem; }
 
