--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -5,11 +5,11 @@ layout: default
 {%-include back_link.html-%}
 
 <article>
-  <p class="post-meta">
-    <time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>
-  </p>
-  
   <h1>{{ page.title }}</h1>
+
+  <p class="post-meta">
+    {{ page.categories }}(<time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>)
+  </p>
 
   {{ content }}
 </article>
