--- a/docs/_sass/no-style-please.scss
+++ b/docs/_sass/no-style-please.scss
@@ -25,8 +25,10 @@ html { height: 100%; }
 
 body {
   color: black;
-  font-family: monospace;
+  font-family: "Nanum Gothic Coding", monospace;
   font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
   line-height: 1.4;
   margin: 0;
   min-height: 100%;
