--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{%-include back_link.html-%}
+<p class="back_link">{%-include back_link.html-%}</p>
 
 <article>
   <h1>{{ page.title }}</h1>
@@ -10,6 +10,8 @@ layout: default
   <p class="post-meta">
     {{ page.categories }}(<time datetime="{{ page.date }}">{{ page.date | date: site.theme_config.date_format }}</time>)
   </p>
+  <p class="desc"><code>{{ page.desc }}</code></p>
+  <p class="info"><code>{{ page.info }}</code></p>
 
   {{ content }}
 </article>
