--- a/docs/_sass/no-style-please.scss
+++ b/docs/_sass/no-style-please.scss
@@ -35,7 +35,12 @@ body {
   overflow-wrap: break-word;
 }
 
-.post-meta { text-align: right; display: inline flex; }
+.back_link { text-align: left; margin: 0; padding-bottom: 2em; }
+
+.post-meta { text-align: left; display: inline flex; }
+
+.desc { text-align: left; margin: 0; }
+.info { text-align: left; margin: 0; padding-bottom: 2em; }
 
 h1 {font-size: 20px; display: inline flex; }
 
@@ -73,7 +78,7 @@ table, th, td {
 
 code {
   color: white;
-  background: black;
+  background: grey;
 }
 
 div.highlighter-rouge code {
