--- a/docs/_includes/youtube.html
+++ b/docs/_includes/youtube.html
@@ -1,9 +1,10 @@
-<div class="embed-container"></div>
+<div class="embed-container">
   <iframe
       src="https://www.youtube.com/embed/{{ include.id }}"
-      width="700"
+      width="720"
       height="480"
       frameborder="0"
-      allowfullscreen="true">
+      allowfullscreen
+      >
   </iframe>
 </div>
