--- a/docs/_sass/no-style-please.scss
+++ b/docs/_sass/no-style-please.scss
@@ -39,6 +39,7 @@ body {
 
 .post-meta { text-align: left; display: inline flex; }
 
+// desc and info part on the top of the post
 .desc { text-align: left; margin: 0; }
 .info { text-align: left; margin: 0; padding-bottom: 2em; }
 
