changed highlight background

--- a/docs/_sass/no-style-please.scss
+++ b/docs/_sass/no-style-please.scss
@@ -53,7 +53,7 @@ p { margin: 1rem 0; }
 
 li { margin: 0.4rem 0; }
 
-*:target { background: yellow; }
+*:target { background: cornsilk; }
 
 .w {
   max-width: 640px;
